kubeless/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kubeless-ingress
  namespace: kubeless
  annotations:  
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - hosts:
    - kubeless.ostrike.com
    secretName: kubeless-secret
  rules:
  - host: kubeless.ostrike.com
    http:
      paths:
      - backend:
          serviceName: ui
          servicePort: 3000
